<resources>
    <string name="app_name">UTN_Login</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signUp">sign up with</string>
    <string name="btn_register">Don\'t have an account? Register now"</string>
    <string name="btn_recover_pass">Forgot your password?</string>
    <string name="data_user">lucasperez381@gmail.com</string>
    <string name="data_pass">1234</string>
    <string name="error_message_user">User incorrect</string>
    <string name="error_message_pass">Password incorrect</string>
    <string name="error_empty">Check for an Empty field!</string>
    <string name="message_welcome"> Login Successful!</string>
    <string name="message_develop">Home Screen\nunder development</string>
</resources>